--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                challenge
+name:                better-lib
 version:             0.1.0.0
-github:              "foxfriends/challenge"
+github:              "foxfriends/better"
 license:             BSD3
 author:              "Cameron Eldridge"
 maintainer:          "cameldridge+git@gmail.com"
@@ -16,16 +16,17 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/foxfriends/challenge#readme>
+description:         Please see the README on GitHub at <https://github.com/foxfriends/better#readme>
 
 dependencies:
 - base >= 4.7 && < 5
+- optparse-applicative >= 0.14.3.0 && < 0.15
 
 library:
   source-dirs: src
 
 executables:
-  challenge-exe:
+  better:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -33,10 +34,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - challenge
+    - better-lib
 
 tests:
-  challenge-test:
+  better-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -44,4 +45,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - challenge
+    - better-lib
