--- a/better-lib.cabal
+++ b/better-lib.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 97d6427d26ba7fb51c6b1aa3bea014ad77cd26ea0bc0b65121d3ce01251c055f
+-- hash: 5ca1fcebb7b2ddb44973aa5e4ffc00c998aee403840006d50dfc177a28fb7804
 
 name:           better-lib
 version:        0.1.0.0
@@ -37,7 +37,7 @@ library
   default-language: Haskell2010
 
 executable better
-  main-is: Main.hs
+  main-is: Main.lhs
   other-modules:
       Paths_better_lib
   hs-source-dirs:
