--- a/package.yaml
+++ b/package.yaml
@@ -27,7 +27,7 @@ library:
 
 executables:
   better:
-    main:                Main.hs
+    main:                Main.lhs
     source-dirs:         app
     ghc-options:
     - -threaded
