--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,7 @@ description:         Please see the README on GitHub at <https://github.com/foxf
 dependencies:
 - base >= 4.7 && < 5
 - optparse-applicative >= 0.14.3.0 && < 0.15
+- terminal-size >= 0.3.2.1 && < 0.3.3
 
 library:
   source-dirs: src
