--- a/package.yaml
+++ b/package.yaml
@@ -28,7 +28,7 @@ library:
 
 executables:
   better:
-    main:                Main.lhs
+    main:                Main.hs
     source-dirs:         app
     ghc-options:
     - -threaded
