--- a/better-lib.cabal
+++ b/better-lib.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 9ef6b46fad3b703c45c1ae5bccd8bf6d40d25c06a02b225a4dff2f479d1974e4
+-- hash: a243b6dee560b6f12073666bd6915987e629f0e7163e0b1d82d9d8ab5cf8bfe1
 
 name:           better-lib
 version:        0.1.0.0
@@ -26,15 +26,18 @@ source-repository head
 
 library
   exposed-modules:
-      Lib
+      Lib.Repo
   other-modules:
       Paths_better_lib
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , containers >=0.6.0.1 && <0.7
+    , directory >=1.3.3.0 && <1.4
+    , filepath >=1.4.2.1 && <1.5
     , optparse-applicative >=0.14.3.0 && <0.15
-    , terminal-size >=0.3.2.1 && <0.3.3
+    , terminal-size >=0.3.2.1 && <0.4
   default-language: Haskell2010
 
 executable better
@@ -45,6 +48,8 @@ executable better
       Commands.Problem
       Commands.Project
       Commands.Tutorial
+      Dirs
+      Repo
       Paths_better_lib
   hs-source-dirs:
       app
@@ -52,8 +57,11 @@ executable better
   build-depends:
       base >=4.7 && <5
     , better-lib
+    , containers >=0.6.0.1 && <0.7
+    , directory >=1.3.3.0 && <1.4
+    , filepath >=1.4.2.1 && <1.5
     , optparse-applicative >=0.14.3.0 && <0.15
-    , terminal-size >=0.3.2.1 && <0.3.3
+    , terminal-size >=0.3.2.1 && <0.4
   default-language: Haskell2010
 
 test-suite better-test
@@ -67,6 +75,9 @@ test-suite better-test
   build-depends:
       base >=4.7 && <5
     , better-lib
+    , containers >=0.6.0.1 && <0.7
+    , directory >=1.3.3.0 && <1.4
+    , filepath >=1.4.2.1 && <1.5
     , optparse-applicative >=0.14.3.0 && <0.15
-    , terminal-size >=0.3.2.1 && <0.3.3
+    , terminal-size >=0.3.2.1 && <0.4
   default-language: Haskell2010
