--- a/better-lib.cabal
+++ b/better-lib.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a243b6dee560b6f12073666bd6915987e629f0e7163e0b1d82d9d8ab5cf8bfe1
+-- hash: f06e411641e3f037fc5344ab13a4f1ba601e17ecb81e0f4fa52d79d10532c433
 
 name:           better-lib
 version:        0.1.0.0
@@ -27,6 +27,9 @@ source-repository head
 library
   exposed-modules:
       Lib.Repo
+      Lib.Tutorial
+      Lib.Tutorial.Module
+      Lib.Tutorial.Spec
   other-modules:
       Paths_better_lib
   hs-source-dirs:
@@ -38,6 +41,9 @@ library
     , filepath >=1.4.2.1 && <1.5
     , optparse-applicative >=0.14.3.0 && <0.15
     , terminal-size >=0.3.2.1 && <0.4
+    , text >=1.2.3.1 && <1.3
+    , tomland >=1.1.0 && <1.2
+    , transformers >=0.5.6 && <0.6
   default-language: Haskell2010
 
 executable better
@@ -62,6 +68,9 @@ executable better
     , filepath >=1.4.2.1 && <1.5
     , optparse-applicative >=0.14.3.0 && <0.15
     , terminal-size >=0.3.2.1 && <0.4
+    , text >=1.2.3.1 && <1.3
+    , tomland >=1.1.0 && <1.2
+    , transformers >=0.5.6 && <0.6
   default-language: Haskell2010
 
 test-suite better-test
@@ -80,4 +89,7 @@ test-suite better-test
     , filepath >=1.4.2.1 && <1.5
     , optparse-applicative >=0.14.3.0 && <0.15
     , terminal-size >=0.3.2.1 && <0.4
+    , text >=1.2.3.1 && <1.3
+    , tomland >=1.1.0 && <1.2
+    , transformers >=0.5.6 && <0.6
   default-language: Haskell2010
