--- a/package.yaml
+++ b/package.yaml
@@ -20,11 +20,14 @@ description:         Please see the README on GitHub at <https://github.com/foxf
 
 dependencies:
 - base >= 4.7 && < 5
+- text >= 1.2.3.1 && < 1.3
 - containers >= 0.6.0.1 && < 0.7
 - directory >= 1.3.3.0 && < 1.4
 - filepath >= 1.4.2.1 && < 1.5
 - optparse-applicative >= 0.14.3.0 && < 0.15
 - terminal-size >= 0.3.2.1 && < 0.4
+- tomland >= 1.1.0 && < 1.2
+- transformers >= 0.5.6 && < 0.6
 
 library:
   source-dirs: src
